<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">抢单神气</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">用户登录</string>
    <string name="login_account_label">用户名：</string>
    <string name="login_password_label">密&#160;&#160;&#160;码：</string>
    <string name="login_button_text">登录</string>
    <string name="title_activity_mains">抢单界面</string>
    
    <string name="main_btm_rob50">抢单50次</string>
    <string name="main_btm_rob5">抢单5次</string>
    <string name="main_btm_rob1">抢单1次</string>
    <string name="web_btm_enter">进入抢单界面</string>

</resources>
