<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.linzb.activity.LoginActivity" >

    <Button
        android:id="@+id/task_rob50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_btm_rob50" />
    
    <Button
        android:id="@+id/task_rob5"
        android:layout_toEndOf="@id/task_rob50"
        android:layout_marginStart="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_btm_rob5" />
    
    <Button
        android:id="@+id/task_rob1"
         android:layout_toEndOf="@id/task_rob5"
          android:layout_marginStart="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_btm_rob1" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_rob50"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/showArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>